fix: fix home page offcanvas footer btns alignment
Fixes #47.

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -58,6 +58,7 @@ $accordion-border-color: $divider;
 
 ._offcanvas-footer {
   @extend .offcanvas-header;
+  justify-content: space-between;
 }
 
 ._rounded-start-1 {
